# sibyl-research-system

./: .gitignore  CLAUDE.md  README.md  README_CN.md  config.example.yaml  pyproject.toml  requirements.txt  setup.sh
demos/remote_parallel_smoke/: README.md  (+1 more)
deploy/: nginx.conf  sibyl-webui-frontend.service  sibyl-webui.service  ttyd-manager.sh
docs/: IMPLEMENTATION_GUIDE_WEBUI.md  architecture.md  getting-started.md  mcp-servers.md  session_prompts.md  研究过程记录.md
fars/: __init__.py  cli.py  config.py  context_builder.py  evolution.py  experiment_records.py  orchestrate.py  prompt_templates.py  reflection.py  workspace.py
scripts/: dev-webui.sh  scaffold_remote_demo.py  validate_remote_demo.py
sibyl/: auto_fix.py  cli.py  config.py  demo.py  evolution.py  experiment_digest.py  experiment_recovery.py  gpu_scheduler.py  lark_markdown_converter.py  lark_sync.py  latex_pipeline.py  orchestrate.py  sentinel.sh  workspace.py
tests/: test_action_dispatcher.py  test_auto_fix.py  test_cli.py  test_control_plane_contracts.py  test_dashboard.py  test_demo.py  test_experiment_digest.py  test_experiment_recovery.py  test_gpu_scheduler.py  test_lark_markdown_converter.py  test_latex_pipeline.py  test_orchestrate.py  test_rebuttal.py  test_sentinel.py  test_support.py  test_webui_app.py  test_webui_control_api.py  test_webui_conversation_watcher.py  test_webui_message_injector.py  test_webui_monitor_api.py  test_webui_session_registry.py  test_webui_state_watcher.py  test_webui_ws_hub.py  test_workspace.py
webui/: README.md  next.config.ts  package-lock.json  package.json
(+405 files in other folders)
